# Sage

./: .editorconfig  README.md  hr.from.josipantolis.sage.yml  meson.build
.github/workflows/: ci.yml
data/: gresource.xml  gschema.xml  hr.from.josipantolis.sage.gschema.xml  meson.build  sage.appdata.xml.in  sage.desktop.in  style.css
po/: POTFILES  hr.from.josipantolis.sage.pot
po/extra/: POTFILES  extra.pot
src/: Application.vala  Board.vala  Colors.vala  EndDialog.vala  Game.vala  Hint.vala  MainWindow.vala  Store.vala  meson.build
src/Widgets/: BoardGrid.vala  ColorPickerBox.vala  ColorPickerButton.vala  Colors.vala  EndGameDialog.vala  GuessRow.vala  GuessToggle.vala  HeaderBar.vala  HelpPopover.vala  HintsGrid.vala  ValidateRowButton.vala
