sources = files (
    'Application.vala',
    'Game.vala',
    'Hint.vala',
    'MainWindow.vala',
    'Store.vala',
    'Widgets/BoardGrid.vala',
    'Widgets/ColorPickerButton.vala',
    'Widgets/Colors.vala',
    'Widgets/EndGameDialog.vala',
    'Widgets/GuessRow.vala',
    'Widgets/GuessToggle.vala',
    'Widgets/HeaderBar.vala',
    'Widgets/HelpPopover.vala',
    'Widgets/HintsGrid.vala',
    'Widgets/ValidateRowButton.vala'
)
